Enhance cigar management features: add flash messages for user feedback, improve form handling, and update UI for better usability.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,10 @@ services:
     build: .
     ports:
       - "5005:8000"
+    env_file:
+      - .env      
+    volumes:
+      - cigar_data:/tmp/cigars_data
+
+volumes:
+  cigar_data:
