Add base HTML template and favicon for AshNote application
- Created a new base.html template for consistent layout across pages.
- Included Bootstrap CSS for styling and responsiveness.
- Added a favicon for the application.
- Implemented a navigation bar with a logo and logout button for authenticated users.
- Integrated flash message display for user notifications.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - .env      
     volumes:
-      - cigar_data:/tmp/cigars_data
+      - appdata:/app/data
 
 volumes:
-  cigar_data:
+  appdata:
